# haxe

./: .earthlyignore  .editorconfig  .gitattributes  .gitignore  .gitignore.orig  .gitmodules  .merlin  .travis.yml  CONTRIBUTING.md  CONTRIBUTING_TR.md  Earthfile  Makefile  Makefile.osx  Makefile.version_extra  Makefile.win  README.md  Test.hx  analyzer.ml  appveyor.yml  ast.ml  azure-pipelines.yml  build.mod  codegen.ml  common.ml  compile.sh  dce.ml  display.hxml  dune  dune-project  dune-workspace.dev  filters.ml  genas3.ml  gencommon.ml  gencpp.ml  gencs.ml  genhl.ml  genjava.ml  genjs.ml  genjs.ml.orig  genlua.ml  (+28 more)
libs/mbedtls/: dune  mbedtls.ml  mbedtls_stubs.c
src/: dune  globals.ml  json.ml  main.ml  path.ml  server.ml  sourcemaps.ml
src/codegen/: codegen.ml  dotnet.ml  genxml.ml  jClass.ml  java.ml  javaModern.ml  overloads.ml  swfLoader.ml
src/codegen/gencommon/: abstractImplementationFix.ml  arrayDeclSynf.ml  arraySpliceOptimization.ml  castDetect.ml  classInstance.ml  closuresToClass.ml  dynamicFieldAccess.ml  dynamicOperators.ml  enumToClass.ml  enumToClass2.ml  expressionUnwrap.ml  filterClosures.ml  fixOverrides.ml  gencommon.ml  hardNullableSynf.ml  initFunction.ml  intDivisionSynf.ml  interfaceProps.ml  interfaceVarsDeleteModf.ml  normalize.ml  objectDeclMap.ml  overloadingConstructor.ml  realTypeParams.ml  reflectionCFs.ml  renameTypeParameters.ml  setHXGen.ml  switchToIf.ml  tArrayTransform.ml  unnecessaryCastsRemoval.ml  unreachableCodeEliminationSynf.ml
src/compiler/: args.ml  compilationCache.ml  compilationContext.ml  compiler.ml  displayOutput.ml  displayProcessing.ml  displayProcessingGlobals.ml  dune  generate.ml  globals.ml  haxe.ml  helper.ml  json.ml  main.ml  messageReporting.ml  path.ml  process_helper.ml  replay.ml  retyper.ml  server.ml  serverCompilationContext.ml  serverConfig.ml  serverMessage.ml  server_old.ml  sourcemaps.ml  tasks.ml
src/compiler/hxb/: hxbAbstractReader.ml  hxbData.ml  hxbLib.ml  hxbReader.ml  hxbReaderApi.ml  hxbRestore.ml  hxbShared.ml  hxbWriter.ml  hxbWriterConfig.ml
src/context/: abstractCast.ml  common.ml  commonCache.ml  compilationServer.ml  display.ml  displayFields.ml  displayJson.ml  displayToplevel.ml  displayTypes.ml  dotGraph.ml  feature.ml  formatString.ml  lookup.ml  memory.ml  meta.ml  nativeLibraries.ml  nativeLibraryHandler.ml  purityState.ml  resolution.ml  sourcemaps.ml  typecore.ml
src/context/display/: deprecationCheck.ml  diagnostics.ml  diagnosticsPrinter.ml  diagnosticsTypes.ml  display.ml  displayEmitter.ml  displayException.ml  displayFields.ml  displayJson.ml  displayPath.ml  displayTexpr.ml  displayToplevel.ml  documentSymbols.ml  exprPreprocessing.ml  findReferences.ml  importHandling.ml  statistics.ml  syntaxExplorer.ml
src/core/: abstract.ml  ast.ml  classPath.ml  classPaths.ml  define.json  define.ml  defineList.ml  displayTypes.ml  dune  error.ml  globals.ml  inheritDoc.ml  json.ml  jsonRpc.ml  jsonRpcSocket.ml  meta.json  meta.ml  metaList.ml  naming.ml  numeric.ml  path.ml  socket.ml  stringError.ml  stringHelper.ml  tFunctions.ml  tOther.ml  tPrinting.ml  tType.ml  tUnification.ml  texpr.ml  timer.ml  type.ml  warning.ml  withType.ml  zip_output.ml
src/core/data/: dataApi.ml  dataReaderApi.ml  dataWriterApi.ml  jsonDataApi.ml
src/core/display/: completionItem.ml  displayPosition.ml  javadoc.ml
src/core/ds/: priorityQueue.ml  ring.ml  stringDynArray.ml  stringPool.ml  uniqueMap.ml
src/core/json/: genjson.ml  json.ml  jsonRequest.ml  jsonRpc.ml  jsonrpc_handler.ml  notifications.ml
src/coro/: coro.ml  coroDebug.ml  coroFromTexpr.ml  coroFunctions.ml  coroToTexpr.ml  coroTypes.ml
src/display/: display.ml  displayOutput.ml  displayTypes.ml
src/filters/: ES6Ctors.ml  addFieldInits.ml  capturedVars.ml  defaultArguments.ml  exceptionFunctions.ml  exceptions.ml  filterContext.ml  filters.ml  filtersCommon.ml  jsExceptions.ml  localStatic.ml  localUsage.ml  renameVars.ml  renameVarsOld.ml  throwTryCatch.ml  tre.ml  tryCatchWrapper.ml  varLazifier.ml
src/generators/: codegen.ml  flashProps.ml  gctx.ml  genas3.ml  gencommon.ml  gencpp.ml  gencs.ml  genhl.ml  genhxold.ml  genjava.ml  genjs.ml  genjson.ml  genjvm.ml  genlua.ml  genml.ml  genneko.ml  genphp.ml  genphp7.ml  genpy.ml  genshared.ml  genswf.ml  genswf9.ml  genxml.ml  hl2c.ml  hlcode.ml  hlinterp.ml  hlopt.ml  jsSourcemap.ml
src/generators/cpp/: CppAstTools.ml  CppContext.ml  CppCppia.ml  CppExprUtils.ml  CppHash.ml  CppSourceWriter.ml  CppTypeUtils.ml  cppAst.ml  cppAstTools.ml  cppContext.ml  cppExprUtils.ml  cppRetyper.ml  cppSourceWriter.ml  cppStrings.ml
src/generators/jvm/: jvmCode.ml  (+12 more)
src/macro/: hlmacro.ml  interp.ml  macroApi.ml  macroContext.ml
src/optimization/: analyzer.ml  analyzerConfig.ml  analyzerCoro.ml  analyzerTexpr.ml  analyzerTexprTransformer.ml  analyzerTypes.ml  dce.ml  filters.ml  inline.ml  inlineConstructors.ml  optimizer.ml  optimizerTexpr.ml
src/prebuild/: main.ml
src/syntax/: ast.ml  dune  grammar.mly  lexer.ml  lexer.mll  parser.ml  parser.mly  parserEntry.ml  reification.ml  semver.ml
src/typing/: abstract.ml  buildMacro.ml  callUnification.ml  calls.ml  common.ml  dotnet.ml  error.ml  exceptions.ml  fieldAccess.ml  fieldCallCandidate.ml  fields.ml  finalization.ml  forLoop.ml  functionArguments.ml  generic.ml  instanceBuilder.ml  java.ml  macroContext.ml  magicTypes.ml  matcher.ml  nullSafety.ml  operators.ml  overloadResolution.ml  overloads.ml  strictMeta.ml  tanon_identification.ml  throwTryCatch.ml  type.ml  typecore.ml  typeload.ml  typeloadCacheHook.ml  typeloadCheck.ml  typeloadFields.ml  typeloadFunction.ml  typeloadModule.ml  typeloadParse.ml  typer.ml  typerBase.ml  typerDisplay.ml  typerDotPath.ml  (+1 more)
(+10590 files in other folders)
