(include_subdirs no)

(library
	(name mbedtls)
	(c_flags (-I../../../../libs/mbedtls/include)) ; TODO: This is stupid
	(c_names
		mbedtls_stubs
		aes
		aesni
		arc4
		aria
		asn1parse
		asn1write
		base64
		bignum
		blowfish
		camellia
		ccm
		certs
		chacha20
		chachapoly
		cipher
		cipher_wrap
		cmac
		ctr_drbg
		debug
		des
		dhm
		ecdh
		ecdsa
		ecjpake
		ecp
		ecp_curves
		entropy
		entropy_poll
		error
		gcm
		havege
		hkdf
		hmac_drbg
		md
		md_wrap
		md2
		md4
		md5
		memory_buffer_alloc
		net_sockets
		nist_kw
		oid
		padlock
		pem
		pk
		pk_wrap
		pkcs11
		pkcs12
		pkcs5
		pkparse
		pkwrite
		platform
		platform_util
		poly1305
		ripemd160
		rsa
		rsa_internal
		sha1
		sha256
		sha512
		ssl_cache
		ssl_ciphersuites
		ssl_cli
		ssl_cookie
		ssl_srv
		ssl_ticket
		ssl_tls
		threading
		timing
		version
		version_features
		x509
		x509_create
		x509_crl
		x509_crt
		x509_csr
		x509write_crt
		x509write_csr
		xtea
	)
	(wrapped false)
)