(rule
	(targets metaList.ml)
	(deps ../../src-prebuild/meta.json)
	(action (with-stdout-to metaList.ml (run %{bin:haxe_prebuild} meta ../../src-prebuild/meta.json)))
)

(rule
	(targets defineList.ml)
	(deps ../../src-prebuild/define.json)
	(action (with-stdout-to defineList.ml (run %{bin:haxe_prebuild} define ../../src-prebuild/define.json)))
)